<resources>
    <string name="app_name">Sehati</string>
    <string name="tittle_login"><b>You must Login to consult</b></string>
    <string name="subtittle_login"><b>We are here to hear you</b></string>
    <string name="tittle_register"><b>Welcome to Sehati!</b></string>
    <string name="subtittle_register"><b>Regist for free and do consultation</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login"><b>Login</b></string>
    <string name="donthave">Don\'t have an account?</string>
    <string name="regist"><b>Register</b></string>
    <string name="name">Name</string>
    
    <string name="meditationDetails">Meditation Details</string>

    <string-array name="meditation_music_txt">
        <item>Morning Routine</item>
        <item>Re-energize Afternoon</item>
        <item>Calm Mind Night</item>
    </string-array>

    <string-array name="meditation_desc_txt">
        <item>Waking up your morning with relax mind</item>
        <item>Charge your energy to continue your day</item>
        <item>Calm and relax your mind for today</item>
    </string-array>
</resources>